finish the index.html for HW2

--- a/Week 3/天堂鸟/index.html
+++ b/Week 3/天堂鸟/index.html
@@ -16,7 +16,7 @@ a:link {
 	color: #F58100;
 }
 a:visited {
-	color: #28E744;
+	color: #28EC7B;
 }
 a:hover {
 	color: #DF18F3;
@@ -34,23 +34,33 @@ a:active {
 	margin-top: 20px;
 }
 .leftbox {
-	width: 600px;
+	width: 580px;
 	height: 100%;	
 	float: left;
 }
 .rightbox {
-	height: 100%;
+	height: 201px;
 	width: 180px;
-	margin-right: 10px;	
+	margin-right: 20px;	
 	margin-top: 50px;
 	float: right;
+}
+.contactbox {
+	font-size: 12px;	
 }
 </style>
 </head>
 
 <body class="showbox">
-<div align="center"><img src="img/title.jpg" class="titlebox" /></div>
-<div>
+<div align="center"><img src="img/title.jpg" class="titlebox" /></div><br />
+<div name="linklist" align="center">
+<font color="#F58100">主页</font>&emsp;&emsp;&emsp;
+<a href="./sanmao.html" target="_blank">三毛其人</a>&emsp;&emsp;&emsp;
+<a href="./lutu.html" target="_blank">人生旅途</a>&emsp;&emsp;&emsp;
+<a href="./zuopin.html" target="_blank">作品介绍</a>&emsp;&emsp;&emsp;
+<a href="./ganshou.html" target="_blank">我的感受</a>
+</div>
+<div><br />
 <div class="leftbox">
 <p align="center" style="color:#F58100;">缘起·缘灭</p>
 <p>&ensp;&ensp;&ensp;&ensp;如果生命是一朵云，它的绚丽，它的光灿，它的变幻和飘流，都是很自然的，只因为它是一朵云。</p> 
@@ -59,5 +69,7 @@ a:active {
 </div>
 <img src="img/picture.jpg" class="rightbox" />
 </div>
+<hr width="800px" />
+<div align="center" class="contactbox"><a href="mailto:chuzm15@mails.tsinghua.edu.cn">联系我们</a></div>
 </body>
 </html>
