design a part of sanmao.html

--- a/Week 3/天堂鸟/sanmao.html
+++ b/Week 3/天堂鸟/sanmao.html
@@ -2,9 +2,71 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>三毛其人</title>
+<title>三毛其人</title><style type="text/css">
+body,td,th {
+	color: #36D300;
+	font-size: 18px;
+	font-weight: bold;
+}
+body {
+	background-image: url(img/parch.jpg);
+}
+a:link {
+	color: #F58100;
+}
+a:visited {
+	color: #28EC7B;
+}
+a:hover {
+	color: #DF18F3;
+}
+a:active {
+	color: #32DBE9;
+}
+.showbox {
+	width: 800px;
+	margin: auto;
+}
+.titlebox {
+	width: 560px;	
+	margin: auto;
+	margin-top: 20px;
+}
+.firstleftbox {
+	float: left;	
+}
+.leftbox {
+	height: 100%;	
+}
+.rightbox {
+	height: 180px;
+	width: 120px;
+	float: right;
+	margin-top: 0px;
+}
+.contactbox {
+	font-size: 12px;	
+}
+</style>
 </head>
 
-<body>
+<body class="showbox">
+<div align="center"><img src="img/title.jpg" class="titlebox" /></div><br />
+<div name="linklist" align="center">
+<a href="./index.html" target="_blank">主页</a>&emsp;&emsp;&emsp;
+<font color="#F58100">三毛其人</font>&emsp;&emsp;&emsp;
+<a href="./lutu.html" target="_blank">人生旅途</a>&emsp;&emsp;&emsp;
+<a href="./zuopin.html" target="_blank">作品介绍</a>&emsp;&emsp;&emsp;
+<a href="./ganshou.html" target="_blank">我的感受</a>
+</div>
+<br />
+<div>
+<img src="img/three.jpg" class="firstleftbox" />
+<img src="img/sanmao.jpg" class="rightbox" />
+<div class="leftbox">
+<p>毛于1943年3月26日生于四川重庆。幼年时期的三毛就表现对书本的爱好，五年级下学期第一次看《红楼梦》。初二那年休学，由父母亲悉心教导，在诗词古文、英文方面，打下次坚实的基础。1967年只身远赴西班牙。在三年之间，前后就读西班牙马德里大学、德国哥德书院，在美国伊诺大学法学图书馆工作。对她的人生经验和语文进修上有很大助益。</p>
+</div>
+
+</div>
 </body>
 </html>
