complete the design of website for Week 3's homework

--- a/Week 3/天堂鸟/lutu.html
+++ b/Week 3/天堂鸟/lutu.html
@@ -3,8 +3,64 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>人生旅途</title>
+<style type="text/css">
+body,td,th {
+	color: #36D300;
+	font-size: 18px;
+	font-weight: bold;
+}
+body {
+	background-image: url(img/parch.jpg);
+}
+a:link {
+	color: #F58100;
+}
+a:visited {
+	color: #28EC7B;
+}
+a:hover {
+	color: #DF18F3;
+}
+a:active {
+	color: #32DBE9;
+}
+.showbox {
+	width: 800px;
+	margin: auto;
+}
+.titlebox {
+	width: 560px;	
+	margin: auto;
+	margin-top: 20px;
+}
+.leftbox {
+	width: 580px;
+	height: 100%;	
+	float: left;
+}
+.rightbox {
+	height: 201px;
+	width: 180px;
+	margin-right: 20px;	
+	margin-top: 50px;
+	float: right;
+}
+.contactbox {
+	font-size: 12px;	
+}
+</style>
 </head>
 
-<body>
+<body class="showbox">
+<div align="center"><img src="img/title.jpg" class="titlebox" /></div><br />
+<div name="linklist" align="center">
+<a href="./index.html" target="_blank">主页</a>&emsp;&emsp;&emsp;
+<a href="./sanmao.html" target="_blank">三毛其人</a>&emsp;&emsp;&emsp;
+<font color="#F58100">人生旅途</font>&emsp;&emsp;&emsp;
+<a href="./zuopin.html" target="_blank">作品介绍</a>&emsp;&emsp;&emsp;
+<a href="./ganshou.html" target="_blank">我的感受</a>
+</div>
+<br />
+<h1 align="center">人生旅途</h1>
 </body>
 </html>
