fix the firefox show problem

--- a/Week 3/天堂鸟/index.html
+++ b/Week 3/天堂鸟/index.html
@@ -45,6 +45,16 @@ a:active {
 	margin-top: 50px;
 	float: right;
 }
+.part1 {
+	width: 100%;
+	z-index: 1;	
+}
+.part2 {
+	width: 100%;
+	z-index: 2;	
+	margin: auto;
+	margin-top: 320px;
+}
 .contactbox {
 	font-size: 12px;	
 }
@@ -60,7 +70,8 @@ a:active {
 <a href="./zuopin.html" target="_blank">作品介绍</a>&emsp;&emsp;&emsp;
 <a href="./ganshou.html" target="_blank">我的感受</a>
 </div>
-<div><br />
+<br />
+<div class="part1">
 <div class="leftbox">
 <p align="center" style="color:#F58100;">缘起·缘灭</p>
 <p>&ensp;&ensp;&ensp;&ensp;如果生命是一朵云，它的绚丽，它的光灿，它的变幻和飘流，都是很自然的，只因为它是一朵云。</p> 
@@ -69,7 +80,9 @@ a:active {
 </div>
 <img src="img/picture.jpg" class="rightbox" />
 </div>
+<div class="part2">
 <hr width="800px" />
 <div align="center" class="contactbox"><a href="mailto:chuzm15@mails.tsinghua.edu.cn">联系我们</a></div>
+</div>
 </body>
 </html>
