a little modified for table design

--- a/Week 4/表格布局/index.html
+++ b/Week 4/表格布局/index.html
@@ -72,8 +72,8 @@ body {
                <td width="293" bgcolor="#99CC00"><table width="95%" border="0" align="center" cellpadding="0" cellspacing="0">
                  <tbody>
                    <tr>
-                     <td style="font-size:9pt">&emsp;&emsp;欢迎您来到世界最著名的咖啡礼品公司的Web站点——Scaal咖啡网站，我们将向您介绍和展示本公司的全部产品。Scaal食品公司提供各类烘制咖啡以及相关的礼品，如咖啡杯、标志T恤文化衫和其他办公用品。Scaal食品公司有着近50年的悠久历史，它为象您这样的咖啡行家提供最好的服务。我们的咖啡产品全部经过严格的烘焙程序，由此保证他们是全世界最好的咖啡之一。经常光顾本公司网站的顾客还可以发现我们每周推出一件的特殊产品优惠价，实惠多多，满意多多。
-                     <br /><br />&emsp;&emsp;我们的咖啡产品全部经过严格的烘焙程序,由此保证他们是全世界最好的咖啡之一。经常光顾本公司网站的顾客还可以发现我们每周推出一件的特殊产品优惠价，实惠多多，满意多多。我们的咖啡产品全部经过严格的烘焙程序，由此保证他们是全世界最好的咖啡之一。经常光顾本公司网站的顾客还可以发现我们每周推出一件的特殊产品优惠价，实惠多多，满意多多。 </td>
+                     <td style="font-size:9pt"><br />&emsp;&emsp;欢迎您来到世界最著名的咖啡礼品公司的Web站点——Scaal咖啡网站，我们将向您介绍和展示本公司的全部产品。Scaal食品公司提供各类烘制咖啡以及相关的礼品，如咖啡杯、标志T恤文化衫和其他办公用品。Scaal食品公司有着近50年的悠久历史，它为象您这样的咖啡行家提供最好的服务。我们的咖啡产品全部经过严格的烘焙程序，由此保证他们是全世界最好的咖啡之一。经常光顾本公司网站的顾客还可以发现我们每周推出一件的特殊产品优惠价，实惠多多，满意多多。
+                     <br /><br />&emsp;&emsp;我们的咖啡产品全部经过严格的烘焙程序,由此保证他们是全世界最好的咖啡之一。经常光顾本公司网站的顾客还可以发现我们每周推出一件的特殊产品优惠价，实惠多多，满意多多。我们的咖啡产品全部经过严格的烘焙程序，由此保证他们是全世界最好的咖啡之一。经常光顾本公司网站的顾客还可以发现我们每周推出一件的特殊产品优惠价，实惠多多，满意多多。<br /><br /> </td>
                    </tr>
                  </tbody>
                </table></td>
