complete for the frame design in week 4

--- a/Week 4/框架布局/index_frame.html
+++ b/Week 4/框架布局/index_frame.html
@@ -14,7 +14,7 @@ body {
 
 <body>
 <!--由于现在在我电脑版本的浏览器中已经不支持frameset标签了，因此作为替换，我使用了iframe架构-->
-<iframe name="title" src="title.html" width="100%" height="150px" ></iframe>
-<iframe name="body" src="tedian.htm" width="100%" height="2000px"></iframe>
+<iframe name="title" src="title.html" width="100%" height="150px" frameborder="0"></iframe>
+<iframe name="body" src="index.htm" width="100%" height="1500px" frameborder="0"></iframe>
 </body>
 </html>
