--- a/Week 4/框架布局/title.html
+++ b/Week 4/框架布局/title.html
@@ -36,7 +36,7 @@ function MM_displayStatusMsg(msgStr) { //v1.0
     <td colspan="5"><div align="center"><img src="images/yiheyuan.png" width="555" height="109"></div></td>
   </tr>
   <tr align="center">
-    <td><a href="dingyi.htm" class="style7" target="body">主页</a></td>
+    <td><a href="index.htm" class="style7" target="body">主页</a></td>
     <td><a href="dingyi.htm" class="style7" target="body">园林的定义</a></td>
     <td><div align="center"><a href="tedian.htm" class="style7" target="body">园林的特点</a></div></td>
     <td><a href="yiheyuan.htm" class="style7" target="body">皇家园林-颐和园 </a></td>
