--- a/Week 4/框架布局/yiheyuan.htm
+++ b/Week 4/框架布局/yiheyuan.htm
@@ -19,19 +19,7 @@
 </style>
 </head>
 
-<body background="images/bg.jpg">
-<table width="600" border="0" align="center" cellpadding="0" cellspacing="1">
-  <tr>
-    <td colspan="5"><div align="center"><img src="images/yiheyuan.png" width="555" height="109"></div></td>
-  </tr>
-  <tr align="center" class="font">
-    <td><div align="center"><a href="index.htm">主页</a></div></td>
-    <td><a href="dingyi.htm">园林的定义</a></td>
-    <td><a href="tedian.htm">园林的特点</a></td>
-    <td><div align="center"><a href="yiheyuan.htm">皇家园林-颐和园 </a></div></td>
-    <td><a href="zhouzhengyuan.htm">私家园林-拙政园</a> </td>
-  </tr>
-</table>
+<body>
 <br>
 <TABLE width="760" border=0 align="center" cellPadding=0 cellSpacing=0>
   <TBODY>
