--- a/Week 5/层布局/index.html
+++ b/Week 5/层布局/index.html
@@ -8,11 +8,25 @@
 body {
 	background-image: url(images/bg.gif);
 }
+.subtitle {
+	float: left;
+	margin-top: 20px;
+}
 .subsubtitle {
-	margin-left: 120px;
+	float: right;
+	font-size: 15px;
 }
 -->
 </style></head>
+<script>
+function visibleMenu1() {
+	document.getElementById("menu1").hidden = false;
+}
+
+function hiddenMenu1() {
+	document.getElementById("menu1").hidden = true;
+}
+</script>
 
 <body style="text-align: left">
 <table width="800" border="0" align="center" cellpadding="0" cellspacing="0">
@@ -21,21 +35,20 @@ body {
       <td align="center"><div style="width:600px" align="center"><img src="images/title.jpg" width="600" height="105" /></div></td>
     </tr>
     <tr>
-      <td height="50"><div id="subtitle" style="width:300px">
-	  <div class="subsubtitle"> 
-	    </div>
-	    <div style="width:100px">
-	      <table width="100" border="0" align="left" cellspacing="0">
+      <td id="body" height="72">
+	  <div id="subtitle" style="width:180px">
+	  <div class="subtitle" style="width:100px">
+	      <table border="0" align="right" cellspacing="0">
 	        <tr>
-	          <td width="100"><img src="images/menu1.gif" width="97" height="44" /></td>
+	          <td><img onmouseover="visibleMenu1()" onmouseout="hiddenMenu1()" src="images/menu1.gif" width="99" height="44" /></td>
               </tr>
 			  <td height="20"></td>
 	        <tr>
-	          <td><img src="images/menu2.gif" width="100" height="44" /></td>
+	          <td><img src="images/menu2.gif" width="99" height="44" /></td>
               </tr>
 			  <td height="20"></td>
 	        <tr>
-	          <td><img src="images/menu3.gif" width="98" height="44" /></td>
+	          <td><img src="images/menu3.gif" width="99" height="44" /></td>
               </tr>
 			  <td height="20"></td>
 	        <tr>
@@ -47,6 +60,23 @@ body {
               </tr>
 	        </table>  
 		  </div>
+	   <div id="menu1" class="subsubtitle" hidden="hidden">
+	    <table width="80" height="80" border="1" cellpadding="0" cellspacing="1">
+          <tr>
+            <td width="91" height="15" align="center" valign="middle" bgcolor="#C8BCBC">指南针</td>
+          </tr>
+          <tr>
+            <td height="15" align="center" valign="middle" bgcolor="#C8BCBC">火药</td>
+          </tr>
+          <tr>
+            <td height="15" align="center" valign="middle" bgcolor="#C8BCBC">造纸术</td>
+          </tr>
+          <tr>
+            <td height="15" align="center" valign="middle" bgcolor="#C8BCBC">印刷术</td>
+          </tr>
+        </table>
+	  </div>
+	    
       </div>
         </td>
     </tr>
