add for block.css

--- a/Week 6/exercise 2/guluoma.htm
+++ b/Week 6/exercise 2/guluoma.htm
@@ -11,6 +11,7 @@
   <meta name="Description" content="">
  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
  <link type="text/css" rel="stylesheet" href="css/link.css" />
+ <link type="text/css" rel="stylesheet" href="css/block.css" />
  </head>
 
 
@@ -39,7 +40,7 @@
   </tr>
   <tr>
     <td width="50%"><div align="center"><img src="pictures/guluoma.jpg" width="150" height="105" /></div></td>
-    <td valign="midle" >古罗马建筑的类型很多。有罗马万神庙、维纳斯和罗马庙，以及巴尔贝克太阳神庙等宗教建筑，也有皇宫、剧场角斗场、浴场以及广场和巴西利卡(长方形会堂)等公共建筑。居住建筑有内庭式住宅、内庭式与围柱式院相结合的住宅，还有四、五层公寓式住宅。</td>
+    <td valign="midle" ><p>古罗马建筑的类型很多。有罗马万神庙、维纳斯和罗马庙，以及巴尔贝克太阳神庙等宗教建筑，也有皇宫、剧场角斗场、浴场以及广场和巴西利卡(长方形会堂)等公共建筑。居住建筑有内庭式住宅、内庭式与围柱式院相结合的住宅，还有四、五层公寓式住宅。</p></td>
   </tr>
 </table>
 
