--- a/Week 6/exercise 2/index.html
+++ b/Week 6/exercise 2/index.html
@@ -11,6 +11,7 @@
   <meta name="Description" content="">
 
  <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
+ <link type="text/css" rel="stylesheet" href="css/block.css" />
   </head>
 
 
