--- a/Week 6/exercise 2/baluoke.htm
+++ b/Week 6/exercise 2/baluoke.htm
@@ -11,6 +11,7 @@
   <meta name="Description" content="">
  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
  <link type="text/css" rel="stylesheet" href="css/link.css" />
+ <link type="text/css" rel="stylesheet" href="css/block.css" />
  </head>
 
 
