add bgimg for develop.htm

--- a/Week 6/exercise 2/develop.htm
+++ b/Week 6/exercise 2/develop.htm
@@ -12,10 +12,17 @@
  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
  <link type="text/css" rel="stylesheet" href="css/link.css" />
  <link type="text/css" rel="stylesheet" href="css/block.css" />
+ <style>
+ body {
+	 background-image: url(pictures/bg.jpg);
+	 background-repeat: repeat;
+	 background-attachment: fixed;
+ }
+ </style>
  </head>
 <body >
  <center>
- <img src="./pictures/lufugong.jpg" width="760" height="200">
+ <img src="./pictures/lufugong.jpg" width="760" height="200" />
  </center>
  <table width="760"  border="0" align="center">
   <tr align="center">
