add for hengfu gif

--- a/Week 6/exercise 2-3/index.html
+++ b/Week 6/exercise 2-3/index.html
@@ -18,7 +18,7 @@
  <body >
  
 <center>
- <img src="./pictures/lufugong.jpg" width="760" height="200">
+<img src="hengfu/hengfu.gif" />
  </center>
  <table width="760"  border="0" align="center">
   <tr align="center">
