--- a/Week 6/exercise 2-3/index.html
+++ b/Week 6/exercise 2-3/index.html
@@ -12,25 +12,76 @@
 
  <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
  <link type="text/css" rel="stylesheet" href="css/block.css" />
-  </head>
+ <script type="text/JavaScript">
+<!--
+function MM_preloadImages() { //v3.0
+  var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
+    var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
+    if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
+}
+
+function MM_findObj(n, d) { //v4.01
+  var p,i,x;  if(!d) d=document; if((p=n.indexOf("?"))>0&&parent.frames.length) {
+    d=parent.frames[n.substring(p+1)].document; n=n.substring(0,p);}
+  if(!(x=d[n])&&d.all) x=d.all[n]; for (i=0;!x&&i<d.forms.length;i++) x=d.forms[i][n];
+  for(i=0;!x&&d.layers&&i<d.layers.length;i++) x=MM_findObj(n,d.layers[i].document);
+  if(!x && d.getElementById) x=d.getElementById(n); return x;
+}
+
+function MM_nbGroup(event, grpName) { //v6.0
+  var i,img,nbArr,args=MM_nbGroup.arguments;
+  if (event == "init" && args.length > 2) {
+    if ((img = MM_findObj(args[2])) != null && !img.MM_init) {
+      img.MM_init = true; img.MM_up = args[3]; img.MM_dn = img.src;
+      if ((nbArr = document[grpName]) == null) nbArr = document[grpName] = new Array();
+      nbArr[nbArr.length] = img;
+      for (i=4; i < args.length-1; i+=2) if ((img = MM_findObj(args[i])) != null) {
+        if (!img.MM_up) img.MM_up = img.src;
+        img.src = img.MM_dn = args[i+1];
+        nbArr[nbArr.length] = img;
+    } }
+  } else if (event == "over") {
+    document.MM_nbOver = nbArr = new Array();
+    for (i=1; i < args.length-1; i+=3) if ((img = MM_findObj(args[i])) != null) {
+      if (!img.MM_up) img.MM_up = img.src;
+      img.src = (img.MM_dn && args[i+2]) ? args[i+2] : ((args[i+1])? args[i+1] : img.MM_up);
+      nbArr[nbArr.length] = img;
+    }
+  } else if (event == "out" ) {
+    for (i=0; i < document.MM_nbOver.length; i++) {
+      img = document.MM_nbOver[i]; img.src = (img.MM_dn) ? img.MM_dn : img.MM_up; }
+  } else if (event == "down") {
+    nbArr = document[grpName];
+    if (nbArr)
+      for (i=0; i < nbArr.length; i++) { img=nbArr[i]; img.src = img.MM_up; img.MM_dn = 0; }
+    document[grpName] = nbArr = new Array();
+    for (i=2; i < args.length-1; i+=2) if ((img = MM_findObj(args[i])) != null) {
+      if (!img.MM_up) img.MM_up = img.src;
+      img.src = img.MM_dn = (args[i+1])? args[i+1] : img.MM_up;
+      nbArr[nbArr.length] = img;
+  } }
+}
+//-->
+ </script>
+ </head>
 
 
- <body >
+ <body onload="MM_preloadImages('nav/zhuye_down.jpg','nav/zhuye_over.jpg','nav/fazhanlicheng_down.jpg','nav/fazhanlicheng_over.jpg','nav/guluoma_down.jpg','nav/guluoma_over.jpg','nav/geteshi_down.jpg','nav/geteshi_over.jpg','nav/baluoke_down.jpg','nav/baluoke_over.jpg','nav/gudianfuxing_down.jpg','nav/gudianfuxing_over.jpg')" >
  
 <center>
 <img src="hengfu/hengfu.gif" />
  </center>
- <table width="760"  border="0" align="center">
-  <tr align="center">
-    <td> <a href="index.html">主 页</a></td>
-    <td><a href="develop.htm">发展历程</a></td>
-    <td><a href="guluoma.htm">古罗马</a></td>
-    <td><a href="geteshi.htm">哥特式</a></td>
-	<td><a href="baluoke.htm">巴洛克</a></td>
-    <td><a href="gudianfuxing.htm">古典复兴</a></td>
-  </tr>
-</table>
    
+ <table width="702" border="0" align="center" cellpadding="0" cellspacing="0">
+   <tr>
+     <td width="88"><a href="index.html" target="_top" onclick="MM_nbGroup('down','group1','zhuye','nav/zhuye_down.jpg',1)" onmouseover="MM_nbGroup('over','zhuye','nav/zhuye_over.jpg','',1)" onmouseout="MM_nbGroup('out')"><img src="nav/zhuye.jpg" alt="" name="zhuye" width="83" height="41" border="0" id="zhuye" onload="" /></a></td>
+     <td width="135"><a href="develop.htm" target="_top" onclick="MM_nbGroup('down','group1','fazhanlicheng','nav/fazhanlicheng_down.jpg',1)" onmouseover="MM_nbGroup('over','fazhanlicheng','nav/fazhanlicheng_over.jpg','',1)" onmouseout="MM_nbGroup('out')"><img src="nav/fazhanlicheng.jpg" alt="" name="fazhanlicheng" width="127" height="41" border="0" id="fazhanlicheng" onload="" /></a></td>
+     <td width="111"><a href="guluoma.htm" target="_top" onclick="MM_nbGroup('down','group1','guluoma','nav/guluoma_down.jpg',1)" onmouseover="MM_nbGroup('over','guluoma','nav/guluoma_over.jpg','',1)" onmouseout="MM_nbGroup('out')"><img src="nav/guluoma.jpg" alt="" name="guluoma" width="104" height="41" border="0" id="guluoma" onload="" /></a></td>
+     <td width="112"><a href="geteshi.htm" target="_top" onclick="MM_nbGroup('down','group1','geteshi','nav/geteshi_down.jpg',1)" onmouseover="MM_nbGroup('over','geteshi','nav/geteshi_over.jpg','',1)" onmouseout="MM_nbGroup('out')"><img src="nav/geteshi.jpg" alt="" name="geteshi" width="105" height="41" border="0" id="geteshi" onload="" /></a></td>
+     <td width="111"><a href="baluoke.htm" target="_top" onclick="MM_nbGroup('down','group1','baluoke','nav/baluoke_down.jpg',1)" onmouseover="MM_nbGroup('over','baluoke','nav/baluoke_over.jpg','',1)" onmouseout="MM_nbGroup('out')"><img src="nav/baluoke.jpg" alt="" name="baluoke" width="104" height="41" border="0" id="baluoke" onload="" /></a></td>
+     <td width="145"><a href="gudianfuxing.htm" target="_top" onclick="MM_nbGroup('down','group1','gudianfuxing','nav/gudianfuxing_down.jpg',1)" onmouseover="MM_nbGroup('over','gudianfuxing','nav/gudianfuxing_over.jpg','',1)" onmouseout="MM_nbGroup('out')"><img src="nav/gudianfuxing.jpg" alt="" name="gudianfuxing" width="127" height="41" border="0" id="gudianfuxing" onload="" /></a></td>
+   </tr>
+ </table>
  <p>&nbsp;</p>
  <table width="760"  border="0" align="center">
   <tr>
