add for embed-responsive

--- a/big job/index.html
+++ b/big job/index.html
@@ -76,7 +76,7 @@ function MM_nbGroup(event, grpName) { //v6.0
 <img src="img/mygif2.gif" width="350px" height="150px" />
 <img src="img/ai-v1.png" width="300px" height="150px" />
 <img src="img/mygif1.gif" width="350px" height="150px" />
-</div>
+</div><br />
 <div id="category">
 <table border="0" cellpadding="0" cellspacing="0" align="center">
   <tr>
@@ -93,6 +93,10 @@ function MM_nbGroup(event, grpName) { //v6.0
   <h1>欢迎关注人工智能</h1>
   <p><b>人工智能</b>（Artificial Intelligence, <b>AI</b>）亦称<b>机器智能</b>，是指由人制造出来的机器所表现出来的智能。通常人工智能是指通过普通计算机程序的手段实现的人类智能技术。</p>
   <p><a class="btn btn-primary btn-lg" href="https://en.wikipedia.org/wiki/Artificial_intelligence" role="button" target="_blank">了解更多</a></p>
-</div></div>
+</div></div><br />
+<h2>A Brief History of Artificial Intelligence </h2>
+<div class="embed-responsive embed-responsive-16by9">	
+  <iframe class="embed-responsive-item" src="video/A Brief History of Artificial Intelligence.mp4"></iframe>
+</div>
 </body>
 </html>
