--- a/big job/aboutus.html
+++ b/big job/aboutus.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>主页</title>
+<title>关于我们</title>
 <style>
 .body {
 	margin: 0 auto;
@@ -15,6 +15,9 @@
 	margin-left: 30px;
 	margin-right: 30px;
 }
+
+
+
 </style>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,700,400&subset=latin,latin-ext' rel='stylesheet' type='text/css' />
 <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css" />
@@ -82,23 +85,14 @@ function MM_nbGroup(event, grpName) { //v6.0
 <div id="category">
 <table border="0" cellpadding="0" cellspacing="0" align="center">
   <tr>
-    <td width="150" align="center"><a href="#" target="_top" onClick="MM_nbGroup('down','group1','shouye','category/shouye_down.jpg',1)" onMouseOver="MM_nbGroup('over','shouye','category/shouye_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img src="category/shouye.jpg" alt="" name="shouye" width="70" height="34" border="0" onload=""></a></td>
+    <td width="150" align="center"><a href="index.html" target="_top" onClick="MM_nbGroup('down','group1','shouye','category/shouye_down.jpg',1)" onMouseOver="MM_nbGroup('over','shouye','category/shouye_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img src="category/shouye.jpg" alt="" name="shouye" width="70" height="34" border="0" onload=""></a></td>
     <td width="150" align="center"><a href="#" target="_top" onClick="MM_nbGroup('down','group1','xuekelingyu','category/xuekelingyu_down.jpg',1)" onMouseOver="MM_nbGroup('over','xuekelingyu','category/xuekelingyu_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="xuekelingyu" src="category/xuekelingyu.jpg" border="0" alt="" onLoad=""></a></td>
     <td width="150" align="center"><a href="#" target="_top" onClick="MM_nbGroup('down','group1','chanyechengguo','category/chanyechengguo_down.jpg',1)" onMouseOver="MM_nbGroup('over','chanyechengguo','category/chanyechengguo_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="chanyechengguo" src="category/chanyechengguo.jpg" border="0" alt="" onLoad=""></a></td>
     <td width="150" align="center"><a href="#" target="_top" onClick="MM_nbGroup('down','group1','yingshizuopin','category/yingshizuopin_down.jpg',1)" onMouseOver="MM_nbGroup('over','yingshizuopin','category/yingshizuopin_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="yingshizuopin" src="category/yingshizuopin.jpg" border="0" alt="" onLoad=""></a></td>
-    <td width="150" align="center"><a href="aboutus.html" target="_top" onClick="MM_nbGroup('down','group1','guanyuwomen','category/guanyuwomen_down.jpg',1)" onMouseOver="MM_nbGroup('over','guanyuwomen','category/guanyuwomen_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="guanyuwomen" src="category/guanyuwomen.jpg" border="0" alt="" onLoad=""></a></td>
+    <td width="150" align="center"><a href="#" target="_top" onClick="MM_nbGroup('down','group1','guanyuwomen','category/guanyuwomen_down.jpg',1)" onMouseOver="MM_nbGroup('over','guanyuwomen','category/guanyuwomen_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="guanyuwomen" src="category/guanyuwomen.jpg" border="0" alt="" onLoad=""></a></td>
   </tr>
 </table>
 </div><br /><br />
-<div class="jumbotron" align="left">
-<div class="injumbotron">
-  <h1>欢迎关注人工智能</h1>
-  <p><b>人工智能</b>（Artificial Intelligence, <b>AI</b>）亦称<b>机器智能</b>，是指由人制造出来的机器所表现出来的智能。通常人工智能是指通过普通计算机程序的手段实现的人类智能技术。</p>
-  <p><a class="btn btn-primary btn-lg" href="https://en.wikipedia.org/wiki/Artificial_intelligence" role="button" target="_blank">了解更多</a></p>
-</div></div><br />
-<h2>A Brief History of Artificial Intelligence </h2>
-<div class="embed-responsive embed-responsive-16by9">	
-  <iframe class="embed-responsive-item" src="video/A Brief History of Artificial Intelligence.mp4"></iframe>
-</div>
+<div id="write" class="is-node show-fences-line-number" style="text-align:left;"><h2><a name='header-n0' class='md-header-anchor '></a>关于我们</h2><p>该网站为我的“网页设计与制作”课程的大作业，人工智能近年来呈现出非常迅猛的上升势头，希望以此来表达对于这个学科的致敬和热爱，你可以在<a href='https://github.com/chuzhumin98/WebsiteDesign/tree/master/big%20job'>github</a>上查看该项目的源代码，以下是我的个人信息，欢迎老师和助教指正。</p><ul><li>姓名：储著敏</li><li>班级：基科51</li><li>学号：2015012177</li><li>邮箱：<a href='mailto:chuzhumin@126.com' target='_blank' >chuzhumin@126.com</a></li></ul></div>
 </body>
 </html>
