--- a/big job/index.html
+++ b/big job/index.html
@@ -15,6 +15,10 @@
 	margin-left: 30px;
 	margin-right: 30px;
 }
+#logo {
+	margin-top: 20px;
+	padding-top: 20px;
+}
 </style>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,700,400&subset=latin,latin-ext' rel='stylesheet' type='text/css' />
 <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css" />
