--- a/big job/field.html
+++ b/big job/field.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>关于我们</title>
+<title>学科领域</title>
 <style>
 .body {
 	margin: 0 auto;
@@ -19,8 +19,6 @@
 	margin-top: 20px;
 	padding-top: 20px;
 }
-
-
 </style>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,700,400&subset=latin,latin-ext' rel='stylesheet' type='text/css' />
 <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css" />
@@ -29,7 +27,6 @@
 <script type="text/JavaScript">
 <!--
 function MM_preloadImages() { //v3.0
-  MM_CheckFlashVersion('7,0,0,0','本页内容需要使用较新的 Macromedia Flash Player 版本。是否现在下载它？');
   var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
     var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
     if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
@@ -78,38 +75,6 @@ function MM_nbGroup(event, grpName) { //v6.0
 }
 //-->
 </script>
-<script type="text/javascript"> 
-function MM_CheckFlashVersion(reqVerStr,msg){ 
-with(navigator){ 
-var isIE = (appVersion.indexOf("MSIE") != -1 && userAgent.indexOf("Opera") == -1); 
-var isWin = (appVersion.toLowerCase().indexOf("win") != -1); 
-if (!isIE || !isWin){ 
-var flashVer = -1; 
-if (plugins && plugins.length > 0){ 
-var desc = plugins["Shockwave Flash"] ? plugins["Shockwave Flash"].description : ""; 
-desc = plugins["Shockwave Flash 2.0"] ? plugins["Shockwave Flash 2.0"].description : desc; 
-if (desc == "") flashVer = -1; 
-else{ 
-var descArr = desc.split(" "); 
-var tempArrMajor = descArr[2].split("."); 
-var verMajor = tempArrMajor[0]; 
-var tempArrMinor = (descArr[3] != "") ? descArr[3].split("r") : descArr[4].split("r"); 
-var verMinor = (tempArrMinor[1] > 0) ? tempArrMinor[1] : 0; 
-flashVer = parseFloat(verMajor + "." + verMinor); 
-} 
-} 
-// WebTV has Flash Player 4 or lower -- too low for video 
-else if (userAgent.toLowerCase().indexOf("webtv") != -1) flashVer = 4.0; 
-var verArr = reqVerStr.split(","); 
-var reqVer = parseFloat(verArr[0] + "." + verArr[2]); 
-if (flashVer < reqVer){ 
-if (confirm(msg)) 
-window.location = "http://www.macromedia.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash"; 
-} 
-} 
-} 
-} 
-</script> 
 </head>
 
 <body class="body" onLoad="MM_preloadImages('category/shouye_down.jpg','category/shouye_over.jpg','category/xuekelingyu_down.jpg','category/xuekelingyu_over.jpg','category/chanyechengguo_down.jpg','category/chanyechengguo_over.jpg','category/yingshizuopin_down.jpg','category/yingshizuopin_over.jpg','category/guanyuwomen_down.jpg','category/guanyuwomen_over.jpg')">
@@ -122,17 +87,13 @@ window.location = "http://www.macromedia.com/shockwave/download/download.cgi?P1_
 <table border="0" cellpadding="0" cellspacing="0" align="center">
   <tr>
     <td width="150" align="center"><a href="index.html" target="_top" onClick="MM_nbGroup('down','group1','shouye','category/shouye_down.jpg',1)" onMouseOver="MM_nbGroup('over','shouye','category/shouye_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img src="category/shouye.jpg" alt="" name="shouye" width="70" height="34" border="0" onload=""></a></td>
-    <td width="150" align="center"><a href="field.html" target="_top" onClick="MM_nbGroup('down','group1','xuekelingyu','category/xuekelingyu_down.jpg',1)" onMouseOver="MM_nbGroup('over','xuekelingyu','category/xuekelingyu_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="xuekelingyu" src="category/xuekelingyu.jpg" border="0" alt="" onLoad=""></a></td>
+    <td width="150" align="center"><a href="#" target="_top" onClick="MM_nbGroup('down','group1','xuekelingyu','category/xuekelingyu_down.jpg',1)" onMouseOver="MM_nbGroup('over','xuekelingyu','category/xuekelingyu_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="xuekelingyu" src="category/xuekelingyu.jpg" border="0" alt="" onLoad=""></a></td>
     <td width="150" align="center"><a href="#" target="_top" onClick="MM_nbGroup('down','group1','chanyechengguo','category/chanyechengguo_down.jpg',1)" onMouseOver="MM_nbGroup('over','chanyechengguo','category/chanyechengguo_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="chanyechengguo" src="category/chanyechengguo.jpg" border="0" alt="" onLoad=""></a></td>
     <td width="150" align="center"><a href="#" target="_top" onClick="MM_nbGroup('down','group1','yingshizuopin','category/yingshizuopin_down.jpg',1)" onMouseOver="MM_nbGroup('over','yingshizuopin','category/yingshizuopin_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="yingshizuopin" src="category/yingshizuopin.jpg" border="0" alt="" onLoad=""></a></td>
-    <td width="150" align="center"><a href="#" target="_top" onClick="MM_nbGroup('down','group1','guanyuwomen','category/guanyuwomen_down.jpg',1)" onMouseOver="MM_nbGroup('over','guanyuwomen','category/guanyuwomen_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="guanyuwomen" src="category/guanyuwomen.jpg" border="0" alt="" onLoad=""></a></td>
+    <td width="150" align="center"><a href="aboutus.html" target="_top" onClick="MM_nbGroup('down','group1','guanyuwomen','category/guanyuwomen_down.jpg',1)" onMouseOver="MM_nbGroup('over','guanyuwomen','category/guanyuwomen_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="guanyuwomen" src="category/guanyuwomen.jpg" border="0" alt="" onLoad=""></a></td>
   </tr>
 </table>
 </div><br /><br />
-<object type="application/x-shockwave-flash" width="100%" height="100%"> 
-    <param name="movie" value="img/focusonus.swf"></param> 
-    <param name="wmode" value="opaque"></param> 
-</object>
-<div id="write" class="is-node show-fences-line-number" style="text-align:left;"><h2><a name='header-n0' class='md-header-anchor '></a>关于我们</h2><p>该网站为我的“网页设计与制作”课程的大作业，人工智能近年来呈现出非常迅猛的上升势头，希望以此来表达对于这个学科的致敬和热爱，你可以在<a href='https://github.com/chuzhumin98/WebsiteDesign/tree/master/big%20job'>github</a>上查看该项目的源代码，以下是我的个人信息，欢迎老师和助教指正。</p><ul><li>姓名：储著敏</li><li>班级：基科51</li><li>学号：2015012177</li><li>邮箱：<a href='mailto:chuzhumin@126.com' target='_blank' >chuzhumin@126.com</a></li></ul></div>
+
 </body>
 </html>
