--- a/big job/index.html
+++ b/big job/index.html
@@ -87,7 +87,7 @@ function MM_nbGroup(event, grpName) { //v6.0
 <table border="0" cellpadding="0" cellspacing="0" align="center">
   <tr>
     <td width="150" align="center"><a href="#" target="_top" onClick="MM_nbGroup('down','group1','shouye','category/shouye_down.jpg',1)" onMouseOver="MM_nbGroup('over','shouye','category/shouye_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img src="category/shouye.jpg" alt="" name="shouye" width="70" height="34" border="0" onload=""></a></td>
-    <td width="150" align="center"><a href="#" target="_top" onClick="MM_nbGroup('down','group1','xuekelingyu','category/xuekelingyu_down.jpg',1)" onMouseOver="MM_nbGroup('over','xuekelingyu','category/xuekelingyu_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="xuekelingyu" src="category/xuekelingyu.jpg" border="0" alt="" onLoad=""></a></td>
+    <td width="150" align="center"><a href="field.html" target="_top" onClick="MM_nbGroup('down','group1','xuekelingyu','category/xuekelingyu_down.jpg',1)" onMouseOver="MM_nbGroup('over','xuekelingyu','category/xuekelingyu_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="xuekelingyu" src="category/xuekelingyu.jpg" border="0" alt="" onLoad=""></a></td>
     <td width="150" align="center"><a href="#" target="_top" onClick="MM_nbGroup('down','group1','chanyechengguo','category/chanyechengguo_down.jpg',1)" onMouseOver="MM_nbGroup('over','chanyechengguo','category/chanyechengguo_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="chanyechengguo" src="category/chanyechengguo.jpg" border="0" alt="" onLoad=""></a></td>
     <td width="150" align="center"><a href="#" target="_top" onClick="MM_nbGroup('down','group1','yingshizuopin','category/yingshizuopin_down.jpg',1)" onMouseOver="MM_nbGroup('over','yingshizuopin','category/yingshizuopin_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="yingshizuopin" src="category/yingshizuopin.jpg" border="0" alt="" onLoad=""></a></td>
     <td width="150" align="center"><a href="aboutus.html" target="_top" onClick="MM_nbGroup('down','group1','guanyuwomen','category/guanyuwomen_down.jpg',1)" onMouseOver="MM_nbGroup('over','guanyuwomen','category/guanyuwomen_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="guanyuwomen" src="category/guanyuwomen.jpg" border="0" alt="" onLoad=""></a></td>
@@ -103,6 +103,11 @@ function MM_nbGroup(event, grpName) { //v6.0
 <h2>A Brief History of Artificial Intelligence </h2>
 <div class="embed-responsive embed-responsive-16by9">	
   <iframe class="embed-responsive-item" src="video/A Brief History of Artificial Intelligence.mp4"></iframe>
+</div>
+<div  id='write'  class = 'is-node show-fences-line-number'>
+<h2><a name='header-n126' class='md-header-anchor '></a>人工智能的发展历史</h2>
+<figure><table><thead><tr><th>年代</th><th>20世纪40年代</th><th>20世纪50年代</th><th>20世纪60年代</th><th>20世纪70年代</th><th>20世纪80年代</th><th>20世纪90年代</th><th>21世纪00年代</th></tr></thead><tbody><tr><td>计算机</td><td>1945 计算机（ENIAC）</td><td>1957 FORTRAN语言</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr><tr><td>人工智能研究</td><td>&nbsp;</td><td>1953 博弈论 1956 达特茅斯会议</td><td>&nbsp;</td><td>1977 知识工程宣言</td><td>1982 第五代电脑计划开始</td><td>1991 人工神经网络 1995 SVM</td><td>2006 深度学习</td></tr><tr><td>人工智能语言</td><td>&nbsp;</td><td>&nbsp;</td><td>1960 LISP语言</td><td>1973 PROLOG语言</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr><tr><td>知识表达</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>1973 生产系统 1976 框架理论</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr><tr><td>专家系统</td><td>&nbsp;</td><td>&nbsp;</td><td>1965 DENDRAL</td><td>1975 MYCIN</td><td>1980 Xcon</td><td>&nbsp;</td><td>&nbsp;</td></tr></tbody></table></figure>
+<p align="left">详见<a href='https://en.wikipedia.org/wiki/History_of_artificial_intelligence'>维基百科</a>.</p><p>&nbsp;</p>
 </div>
 </body>
 </html>
